fix for IE11 p tag content overflow in product pgs

--- a/wp-content/themes/ideum/stylesheets/components/_product-section.scss
+++ b/wp-content/themes/ideum/stylesheets/components/_product-section.scss
@@ -148,6 +148,7 @@ $product-spec-list-left-margin: 15px;
       	}
 
       	p{
+      		max-width: 100%;
       		text-align: left;
       	}
 
